<resources>
    <string name="app_name">NoteTalking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="nama">Nama :</string>
    <string name="username">Username :</string>
    <string name="password">password</string>
    <string name="register2">Register</string>
    <string name="input_data">Input Data</string>
    <string name="masukkan_judul">Masukkan judul</string>
</resources>